--- a/TinyECSTests/TinyECSTests.csproj
+++ b/TinyECSTests/TinyECSTests.csproj
@@ -54,6 +54,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComponentManager\ComponentManagerTests.cs" />
     <Compile Include="EntityManager\EntityManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
