Add an implementation of default system manager
Changes:
* A new class SystemManager was defined.
* A new test fixture SystemManagerTests was created.
* A new exception's class InvalidIdentifierException was defined.

--- a/TinyECS/TinyECS.csproj
+++ b/TinyECS/TinyECS.csproj
@@ -41,11 +41,13 @@
     <Compile Include="Impls\Entity.cs" />
     <Compile Include="Impls\EntityManager.cs" />
     <Compile Include="Impls\Exceptions.cs" />
+    <Compile Include="Impls\SystemManager.cs" />
     <Compile Include="Interfaces\IComponent.cs" />
     <Compile Include="Interfaces\IComponentManager.cs" />
     <Compile Include="Interfaces\IEntity.cs" />
     <Compile Include="Interfaces\IEntityManager.cs" />
     <Compile Include="Interfaces\ISystem.cs" />
+    <Compile Include="Interfaces\ISystemManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
