--- a/TinyECSTests/TinyECSTests.csproj
+++ b/TinyECSTests/TinyECSTests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ComponentManager\ComponentManagerTests.cs" />
     <Compile Include="EntityManager\EntityManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemManager\SystemManagerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TinyECS\TinyECS.csproj">
