--- a/TinyECSTests/TinyECSTests.csproj
+++ b/TinyECSTests/TinyECSTests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="EntityManager\EntityManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemManager\SystemManagerTests.cs" />
+    <Compile Include="WorldContext\WorldContextTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TinyECS\TinyECS.csproj">
