--- a/Samples/SandboxProject/SandboxProject.csproj
+++ b/Samples/SandboxProject/SandboxProject.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5F068059-FCFC-4A07-8430-C58431B39795}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TinyECS</RootNamespace>
-    <AssemblyName>TinyECS</AssemblyName>
+    <ProjectGuid>{C2F4C946-E6A2-4ED6-BEB8-AC6EB56D411F}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>SandboxProject</RootNamespace>
+    <AssemblyName>SandboxProject</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -37,22 +39,17 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Impls\ComponentManager.cs" />
-    <Compile Include="Impls\Entity.cs" />
-    <Compile Include="Impls\EntityManager.cs" />
-    <Compile Include="Impls\Exceptions.cs" />
-    <Compile Include="Impls\SystemManager.cs" />
-    <Compile Include="Impls\WorldContext.cs" />
-    <Compile Include="Interfaces\IComponent.cs" />
-    <Compile Include="Interfaces\IComponentManager.cs" />
-    <Compile Include="Interfaces\IEntity.cs" />
-    <Compile Include="Interfaces\IEntityManager.cs" />
-    <Compile Include="Interfaces\ISystem.cs" />
-    <Compile Include="Interfaces\ISystemManager.cs" />
-    <Compile Include="Interfaces\ISystemsGroup.cs" />
-    <Compile Include="Interfaces\IWorldContext.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\TinyECS\TinyECS.csproj">
+      <Project>{5f068059-fcfc-4a07-8430-c58431b39795}</Project>
+      <Name>TinyECS</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
