--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,8 +19,7 @@ clone_depth: 1
 before_build:
   - nuget restore
 
-assemblies:
-  - '**\bin\$(configuration)\TinyECSTests.dll'
+assemblies: '**\bin\$(configuration)\TinyECSTests.dll'
 
 test_script:
   - nunit3-console $(assmebly) --result=results.xml;format=AppVeyor
