--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,9 @@ clone_depth: 1
 before_build:
   - nuget restore
 
-assemblies: '**\bin\$(configuration)\TinyECSTests.dll'
+test:
+  assemblies:
+    - '**\bin\$(configuration)\TinyECSTests.dll'
 
 test_script:
   - nunit3-console $(assmebly) --result=results.xml;format=AppVeyor
