--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,5 +22,5 @@ test:
   assemblies:
     - '**\bin\$(configuration)\TinyECSTests.dll'
 
-test_script:
-  - nunit3-console $(assmebly) --result=results.xml;format=AppVeyor
+#test_script:
+#  - nunit3-console $(assmebly) --result=results.xml;format=AppVeyor
