Introduce a concept of pure systems
Changes:
* A new concept of pure systems was introduced. A pure system means a
lambda function which doesn't store its state between calls.
* A new base class PureSystemAdapter was declared.
* Two new classes PureInitSystemAdapter and PureUpdateSystemAdapter were
defined.

--- a/TinyECS/TinyECS.csproj
+++ b/TinyECS/TinyECS.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Impls\EntityManager.cs" />
     <Compile Include="Impls\Exceptions.cs" />
     <Compile Include="Impls\SystemManager.cs" />
+    <Compile Include="Impls\PureSystemsAdapters.cs" />
     <Compile Include="Impls\WorldContext.cs" />
     <Compile Include="Interfaces\IComponent.cs" />
     <Compile Include="Interfaces\IComponentManager.cs" />
