--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,11 +26,11 @@ artifacts:
     - path: TinyECS.zip
 
 after_build:
-  7z a TinyECS.zip %APPVEYOR_BUILD_FOLDER%\TinyECS\bin\$(configuration)\ %APPVEYOR_BUILD_FOLDER%\README.md %APPVEYOR_BUILD_FOLDER%\LICENSE #create zip archive with all the binaries and documentation
+  7z a TinyECS.zip %APPVEYOR_BUILD_FOLDER%\TinyECS\bin\%CONFIGURATION%\ %APPVEYOR_BUILD_FOLDER%\README.md %APPVEYOR_BUILD_FOLDER%\LICENSE #create zip archive with all the binaries and documentation
 
 deploy:
   release: TinyECS-v$(appveyor_build_version)
-  description: 'Release description'
+  description: ''
   provider: GitHub
   auth_token:
     secure: 1xPR+/5vbL2PEPkG/LtjPXkZqAfB6vZWxVrUCdr6afKZ9utwUA7n6mzDv7//N2gk
