--- a/TinyECSUnityIntegration/TinyECSUnityIntegration.csproj
+++ b/TinyECSUnityIntegration/TinyECSUnityIntegration.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TinyECSUnityIntegration</RootNamespace>
     <AssemblyName>TinyECSUnityIntegration</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile>
@@ -44,8 +44,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Impls\BaseStaticView.cs" />
+    <Compile Include="Impls\BaseView.cs" />
     <Compile Include="Impls\DependencyInjector.cs" />
     <Compile Include="Impls\WorldContextsManager.cs" />
+    <Compile Include="Interfaces\IView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -54,8 +57,6 @@
       <Name>TinyECS</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
