Add a new type of a view which is a dynamic view
Changes:
* A new class BaseDynamicView was declared.

--- a/TinyECSUnityIntegration/TinyECSUnityIntegration.csproj
+++ b/TinyECSUnityIntegration/TinyECSUnityIntegration.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Impls\BaseDynamicView.cs" />
     <Compile Include="Impls\BaseStaticView.cs" />
     <Compile Include="Impls\BaseView.cs" />
     <Compile Include="Impls\DependencyInjector.cs" />
