--- a/TinyECSTests/TinyECSTests.csproj
+++ b/TinyECSTests/TinyECSTests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="EntityManager\EntityManagerTests.cs" />
     <Compile Include="EventManager\EventManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemManager\BuiltinSystemsTests.cs" />
     <Compile Include="SystemManager\SystemManagerTests.cs" />
     <Compile Include="TinyECSUnityIntegrationTests\RegisterViewSystemTests.cs" />
     <Compile Include="WorldContext\WorldContextTests.cs" />
