--- a/TinyECSUnityIntegration/TinyECSUnityIntegration.csproj
+++ b/TinyECSUnityIntegration/TinyECSUnityIntegration.csproj
@@ -49,8 +49,10 @@
     <Compile Include="Impls\BaseStaticView.cs" />
     <Compile Include="Impls\BaseView.cs" />
     <Compile Include="Impls\DependencyInjector.cs" />
+    <Compile Include="Impls\GameObjectFactory.cs" />
     <Compile Include="Impls\RegisterViewSystem.cs" />
     <Compile Include="Impls\WorldContextsManager.cs" />
+    <Compile Include="Interfaces\IGameObjectFactory.cs" />
     <Compile Include="Interfaces\IView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
