--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,12 +18,20 @@ clone_depth: 1
 before_build:
   - nuget restore
 
+environment:
+  COVERALLS_REPO_TOKEN:
+    y9Xai/mlfKfPkl5U1cpMgfbMD9pcqkiVNMa4jQLX0o0aa//5yiqHbys5Gn4Hofvj
+
 test:
   assemblies:
     - '**\bin\$(configuration)\TinyECSTests.dll'
 
 artifacts:
     - path: TinyECS.zip
+
+after_test:
+  - cmd:packages\OpenCover.4.7.922\tools\OpenCover.Console.exe -register:user -filter:"+[*]*" -target:"packages\NUnit.ConsoleRunner.3.10.0\tools\nunit3-console.exe" -targetargs:"/domain:single "**\bin\$(configuration)\TinyECSTests.dll" -output:coverage.xm
+  - cmd: packages\coveralls.io.1.4.2\tools\coveralls.net.exe --opencover coverage.xml -r %COVERALLS_REPO_TOKEN%
 
 after_build:
   #create zip archive with all the binaries and documentation
