--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,7 @@ artifacts:
     - path: TinyECS.zip
 
 after_test:
-  - cmd: packages\OpenCover.4.7.922\tools\OpenCover.Console.exe -register:user -filter:"+[*]*" -target:"packages\NUnit.ConsoleRunner.3.10.0\tools\nunit3-console.exe" -targetargs:"/domain:single TinyECSTests\bin\%CONFIGURATION%\TinyECSTests.dll" -output:coverage.xm
+  - cmd: packages\OpenCover.4.7.922\tools\OpenCover.Console.exe -register:user -filter:"+[*]*" -target:"packages\NUnit.ConsoleRunner.3.10.0\tools\nunit3-console.exe" -targetargs:"/domain:single TinyECSTests\bin\%CONFIGURATION%\TinyECSTests.dll" -output:coverage.xml
   - cmd: packages\coveralls.io.1.4.2\tools\coveralls.net.exe --opencover coverage.xml -r %COVERALLS_REPO_TOKEN%
 
 after_build:
