--- a/TinyECSTests/packages.config
+++ b/TinyECSTests/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
   <package id="coveralls.io" version="1.4.2" targetFramework="net461" />
-  <package id="NSubstitute" version="4.0.0" targetFramework="net461" />
+  <package id="NSubstitute" version="4.1.0" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.10.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
   <package id="OpenCover" version="4.7.922" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
 </packages>
