--- a/TinyECSTests/packages.config
+++ b/TinyECSTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
   <package id="coveralls.io" version="1.4.2" targetFramework="net461" />
+  <package id="coveralls.net" version="0.7.0" targetFramework="net461" developmentDependency="true" />
   <package id="NSubstitute" version="4.2.0" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.10.0" targetFramework="net461" />
