--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,8 @@ before_build:
 environment:
   COVERALLS_REPO_TOKEN:
     secure: y9Xai/mlfKfPkl5U1cpMgfbMD9pcqkiVNMa4jQLX0o0aa//5yiqHbys5Gn4Hofvj
+  CODECOV_TOKEN:
+    secure: adhiK/xX7bRpxvUgWD/4IBEGyoKcaRYB0XQeEureIcj4ufrixfQAFtSzWpdPJ3Td
 
 test:
   assemblies:
