--- a/TinyECSUnityIntegrationEditor/TinyECSUnityIntegrationEditor.csproj
+++ b/TinyECSUnityIntegrationEditor/TinyECSUnityIntegrationEditor.csproj
@@ -35,8 +35,9 @@
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="UnityEditor">
-      <HintPath>D:\Program Files (x86)\Unity\Editor\Data\Managed\UnityEditor.dll</HintPath>
+    <Reference Include="UnityEditor, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Deps\Unity\UnityEditor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
       <HintPath>..\Deps\Unity\UnityEngine.dll</HintPath>
