Add a new helper type
Changes:
* A new helper class, which is called EntityObserver, was defined.
* A new custom editor EntityObserverEditor was declared, but's not fully
implemented yet.

--- a/TinyECSUnityIntegration/TinyECSUnityIntegration.csproj
+++ b/TinyECSUnityIntegration/TinyECSUnityIntegration.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Impls\BaseStaticView.cs" />
     <Compile Include="Impls\BaseView.cs" />
     <Compile Include="Impls\DependencyInjector.cs" />
+    <Compile Include="Impls\EntityObserver.cs" />
     <Compile Include="Impls\GameObjectFactory.cs" />
     <Compile Include="Impls\RegisterViewSystem.cs" />
     <Compile Include="Impls\WorldContextsManager.cs" />
