Add a new helper type for ISystemManager's integration into Unity3D
Changes:
* A new class SystemManagerObserver was defined.
* A new custom editor SystemManagerObserverEditor was defined.
* A new class SystemManagerObserverUtils was defined.

--- a/TinyECSUnityIntegration/TinyECSUnityIntegration.csproj
+++ b/TinyECSUnityIntegration/TinyECSUnityIntegration.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Impls\BaseDynamicView.cs" />
     <Compile Include="Impls\BaseStaticView.cs" />
     <Compile Include="Impls\BaseView.cs" />
+    <Compile Include="Impls\SystemManagerObserver.cs" />
     <Compile Include="Impls\DependencyInjector.cs" />
     <Compile Include="Impls\EntityObserver.cs" />
     <Compile Include="Impls\GameObjectFactory.cs" />
