--- a/TinyECSTests/TinyECSTests.csproj
+++ b/TinyECSTests/TinyECSTests.csproj
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComponentManager\ComponentIteratorTests.cs" />
     <Compile Include="ComponentManager\ComponentManagerTests.cs" />
     <Compile Include="EntityManager\EntityManagerTests.cs" />
     <Compile Include="EventManager\BrokenEventListenerMock.cs" />
