--- a/TinyECSUnityIntegrationEditor/TinyECSUnityIntegrationEditor.csproj
+++ b/TinyECSUnityIntegrationEditor/TinyECSUnityIntegrationEditor.csproj
@@ -44,6 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Inspectors\BaseViewEditor.cs" />
     <Compile Include="Inspectors\EntityObserverEditor.cs" />
     <Compile Include="Inspectors\SystemManagerObserverEditor.cs" />
     <Compile Include="Inspectors\WorldContextsManagerEditor.cs" />
